Fix bulk table layout: fixed columns, proper logo sizing, badge wrapping

--- a/css/nacex.css
+++ b/css/nacex.css
@@ -396,6 +396,18 @@ http://www.generateit.net/css-optimize/index.php
 		margin-top: 1em;
 	}
 
+	#list_table td {
+		overflow: hidden;
+		text-overflow: ellipsis;
+		vertical-align: middle;
+	}
+
+	#list_table td img[src*="logos/"] {
+		width: 60px;
+		height: auto;
+		max-height: 20px;
+	}
+
 	.thead-default td #createIcon {
 		margin-left: 4em;
 	}
